--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -23,12 +23,14 @@
     @include tablet-phone 
       padding: 15px 0px
     &__title
-        width: 38%
+        width: 45.5%
         // background: red
         display: flex
         text-align: center
         @include edgesnap 
-          width: 40%
+          width: 46.5%
+        @include tablet
+          width: 20%
     h1
         width: 100%
         .image
@@ -51,14 +53,16 @@
         // background: red
         font-size: .9em
         display: flex
-        width: 38%
+        width: 45%
         // background: lightseagreen
         @include edgesnap 
-          width: 40%
+          width: 47%
         @media(max-width: 1000px)
-          width: 48% !important
-        // @media(max-width: 1100px)
-          // width: 30%
+          width: 55%
+        @media(max-width: 700px)
+          width: 60%
+        @include tablet-phone
+          width: 65%
         @include navsnap
             display: none
         .nav
