--- a/src/components/styles/masterclasses.sass
+++ b/src/components/styles/masterclasses.sass
@@ -6,6 +6,10 @@
     display: flex
     flex-direction: column
     width: 100%
+    opacity: 0
+    transition: all 1s ease-in-out
+    &.loaded 
+      opacity: 1
     &:first-child
       // display: none
 .pageinfo
@@ -32,7 +36,7 @@
       max-width: 1100px
       &.loaded 
         opacity: 1
-    hr.photo__hr
+    hr.page__hr
         margin: auto
         width: 0%
         background: #cdccca
