--- a/src/components/styles/masterclasses.sass
+++ b/src/components/styles/masterclasses.sass
@@ -26,7 +26,7 @@
         &.loaded 
           opacity: 1
           transform: translateY(0%)
-    .gallery__text
+    .masterclass__text
       display: flex
       text-align: center
       justify-content: center
