--- a/src/components/styles/masterclasses.sass
+++ b/src/components/styles/masterclasses.sass
@@ -30,10 +30,14 @@
       display: flex
       text-align: center
       justify-content: center
-      margin-bottom: 50px
+      margin-bottom: 40px
       opacity: 0
       transition: all 1s ease-in-out
       max-width: 1100px
+      flex-direction: column
+      p
+        padding-bottom: 1em
+
       &.loaded 
         opacity: 1
     hr.page__hr
