added insata gram icon

--- a/src/components/classCard/classCard.sass
+++ b/src/components/classCard/classCard.sass
@@ -202,3 +202,15 @@
           transform: scale(1.03)
 .c0
   margin-top: 0 !important
+.masterclass__container__class__dropdown__item
+  a
+    color: $accent
+    display: inline
+  &__icon
+    display: inline
+    padding: 0px 2px
+    img
+      display: inline
+      width: 1.5em
+      vertical-align: top
+  // position: inline-block
