--- a/src/components/classCard/classCard.sass
+++ b/src/components/classCard/classCard.sass
@@ -58,47 +58,75 @@
       &__left
         @media(max-width: 700px) 
           order: 1
+        @media(max-width: 530px) 
+          transform: translateX(-1em)
+          // z-index: 1
+        @media(max-width: 450px) 
+          transform: translateX(-3em)
         &__image
           .gatsby-image-wrapper, img 
             object-position: left !important
       &__right
         @media(max-width: 700px) 
           order: 2
+        @media(max-width: 530px) 
+          // z-index: -1
+          // padding-left: var(--mobileMargin)
+        @media(max-width: 450px) 
+          transform: translateX(1em)
         &__image
           .gatsby-image-wrapper, img 
             object-position: right !important
       .centerDivOne, .centerDivTwo
-        --width: 15%
+        --width: 25%
         display: flex
         width: var(--width)
         height: var(--MobilePicHeight)
         // background: rgba(155,12,164, 0.5)
         // background: red
         position: absolute
-        z-index: 1
+        z-index: 9
+        @media(max-width: 530px) 
+          // --width: 50%
       .centerDivOne
         // background-image: linear-gradient(to left, #ffffff , rgba(#ffffff, 0))
         background-image: linear-gradient(to left, white , rgba(255,255,255, 0))
         // background: none
         margin-left: calc((var(--width) * .5) * -1)
         // margin-left: -5%
+        @media(max-width: 530px)
+          width: 25%
+          transform: translateX(-1.35em)
+        @media(max-width: 450px)
+          // margin-left: 100px
+          // margin-left: 0px
+          margin-right: 30px
       .centerDivTwo
         // background-image: linear-gradient(to right, #ffffff , rgba(#ffffff, 0))
         background-image: linear-gradient(to right, white , rgba(255,255,255, 0))
         margin-left: calc((var(--width) * .5)*1.001)
-
+        @media(max-width: 530px)
+          width: 40%
+          margin-left: 80px
+        @media(max-width: 450px)
+          // margin-right: 100px
+      @media(max-width: 450px)
+        .centerDivOne 
+          background-image: linear-gradient(to left, white, 70%, rgba(255,255,255, 0))
+        .centerDivTwo
+          background-image: linear-gradient(to right, white, 50%, rgba(255,255,255, 0))
       &__center 
         display: flex
         align-items: center
         position: absolute
-        max-width: 35%
+        max-width: 40%
         // background: red 
         height: 100%
         //vertically centers the info text
         align-self: center
         //brings text on top of photos
         z-index: 1
-        margin-left: -7em
+        margin-left: -6em
         @media(max-width: 1000px)
           margin-left: -5em
         @media(max-width: 850px)
@@ -108,7 +136,7 @@
         @media(max-width: 700px)
           justify-content: center 
           position: relative
-          max-width: 100%
+          max-width: 85%
           width: 100%
           // background: yellow
           height: calc(100% - (var(--MobilePicHeight)))
@@ -164,7 +192,7 @@
       display: flex 
       flex-direction: column
       margin-top: 1.45em
-      margin-bottom: 4em
+      margin-bottom: 2.5em
       // background: lightskyblue
       &__item, .price 
         h4 
