--- a/src/components/classCard/classCard.sass
+++ b/src/components/classCard/classCard.sass
@@ -20,6 +20,8 @@
       transition: all .5s ease-in-out
       cursor: pointer
       --MobilePicHeight: 50%
+    
+
       &:hover 
         transform: scale(1.01)
         box-shadow: 0px 0px 7px 3px rgba(219,219,219,0.7)
@@ -30,6 +32,15 @@
         // flex-direction: column
         width: 100%
         height: 400px
+      @include phone-large
+        --MobilePicHeight: 38%
+        height: 350px
+      @include phone
+        --MobilePicHeight: 34%
+        height: 320px
+      @include phone-small
+      --MobilePicHeight: 30%
+      height: 290px
       &__left, &__right
         width: 100%
         height: 100%
