--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -57,11 +57,16 @@ $tablet-phone: 650px
 $tablet-width: 768px
 $tablet-large: 1024px
 $desktop-width: 992px
+$ipad: 840px
 $edgesnap-width: 1420px
 $tablet-landscape-width: 1024px
 $nav-snap: 610px
 $featured-snap: 900px
 
+
+=ipad 
+  @media(max-width: #{$ipad})
+    @content
 
 =tablet-large 
   @media (max-width: #{$tablet-large})
