banner always around

--- a/src/components/layout/notification.sass
+++ b/src/components/layout/notification.sass
@@ -3,7 +3,7 @@
     display: flex
     justify-content: center
     transition: all .75s ease-in-out
-    transform: translateY(-100%)
+    // transform: translateY(-100%)
     background: $accent
     color: white
     &__text
