--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -63,9 +63,37 @@
       display: flex
       flex-wrap: wrap
       // justify-content: space-between
-      justify-content: center
+      // justify-content: flex-end
+      // justify-content: center
+      // align-content: center 
+      // align-items: center
       // background: red
       flex-direction: row-reverse
+      &__list
+        display: flex
+        flex-wrap: wrap
+        // background: green
+        flex-direction: row-reverse
+        justify-content: center
+        width: 100%
+        // height: 500px
+        &__single
+          display: flex
+          justify-content: center
+          width: 21%
+          align-items: center
+          // background: orange
+          @include tablet
+            width: 25%
+          @include tablet-phone 
+            width: 25%
+          &:last-child
+            margin: auto
+          &__image
+              width: 80%
+              // @include tablet-phone 
+              //   width: 100%
+
       h3
           display: flex
           width: 100%
@@ -115,22 +143,7 @@
       //       width: 100%
 
       //this is if we have 16 sponsors total, with one centered at the bottom
-      &__single
-          display: flex
-          justify-content: center
-          width: 18%
-          align-items: center
-          @include tablet
-            width: 25%
-          @include tablet-phone 
-            width: 30%
-          &:last-child
-            margin: auto
-          &__image
-              width: 80%
-              // @include tablet-phone 
-              //   width: 100%
-
+     
 .home
   .page__sign
     margin-top: 0px
