added sponsor and changed formatting

--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -88,7 +88,7 @@
           @include tablet-phone 
             width: 25%
           &:last-child
-            margin: auto
+            // margin: auto
           &__image
               width: 80%
               // @include tablet-phone 
