--- a/src/components/classCard/classCard.sass
+++ b/src/components/classCard/classCard.sass
@@ -1,7 +1,14 @@
 @import "../base.sass"
 
+
 .masterclass__container
   //above class is styled in a different component
+  position: relative
+  .classcard
+    &.inactive
+      background: red
+      width: 100%
+
   &__class
     display: flex
     width: 100%
@@ -20,8 +27,6 @@
       transition: all .5s ease-in-out
       cursor: pointer
       --MobilePicHeight: 50%
-    
-
       &:hover 
         transform: scale(1.01)
         box-shadow: 0px 0px 7px 3px rgba(219,219,219,0.7)
@@ -42,6 +47,7 @@
       --MobilePicHeight: 30%
       height: 290px
       &__left, &__right
+        position: relative
         width: 100%
         height: 100%
         @media(max-width: 700px) 
@@ -49,6 +55,7 @@
           // height: 50%
           height: var(--MobilePicHeight)
           position: relative
+        
         &__image 
           height: 100% 
           width: auto
@@ -56,13 +63,22 @@
             // height: 100%
             // width: auto
             // background: orange
+          &__container
+            height: 100% 
+          //   width: auto
+          //   background: rgba(0,0,0,0.25)
+          //   z-index: 1000
           .gatsby-image-wrapper, img 
             object-fit: contain !important
             height: 100%
             width: 100%
+            z-index: -1
             @media(max-width: 700px) 
               object-position: top !important
               object-fit: cover !important
+            &.inactive
+              -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+              filter: grayscale(100%)
           img 
             height: 100%
             max-height: 100%
