--- a/src/components/styles/masterclasses.sass
+++ b/src/components/styles/masterclasses.sass
@@ -8,6 +8,9 @@
     width: 100%
     opacity: 0
     transition: all 1s ease-in-out
+    h3.pagetitle 
+      text-align: center
+      margin-bottom: 2em
     &.loaded 
       opacity: 1
     &:first-child
