--- a/src/components/styles/masterclasses.sass
+++ b/src/components/styles/masterclasses.sass
@@ -11,6 +11,8 @@
     h3.pagetitle 
       text-align: center
       margin-bottom: 2em
+    .inactive
+      margin-top: 2em
     &.loaded 
       opacity: 1
     &:first-child
