--- a/src/components/styles/masterclasses.sass
+++ b/src/components/styles/masterclasses.sass
@@ -11,7 +11,7 @@
     h3.pagetitle 
       text-align: center
       margin-bottom: 2em
-    .inactive
+    h3.inactive
       margin-top: 2em
     &.loaded 
       opacity: 1
